# wasm-multiexp-bench

./: .gitignore  .rustfmt.toml  .taplo.toml  BENCHMARK-new.md  BENCHMARK-old.md  Cargo-new.toml  Cargo-old.toml  Cargo.toml  README.md  bench.wat  package.template.json
.cargo/: config.toml
.github/workflows/: workspace.yml
bench-results/: BENCHMARK-combined.md  BENCHMARK-new.md  BENCHMARK-old.md  benchmark-combined.md
bench-results/pw-outputs-new/: chromium_1729252391_320.result.txt  chromium_1729253114_286.result.txt  chromium_1729253202_279.result.txt  chromium_1729253290_336.result.txt  chromium_1729253384_2.result.txt  chromium_1729253516_995.result.txt  chromium_1729253734_589.result.txt  chromium_1729254139_57.result.txt  chromium_1729255539_813.result.txt  chromium_1729255741_264.result.txt  chromium_1729255935_646.result.txt  chromium_1729256143_903.result.txt  chromium_1729256416_79.result.txt  (+19 more)
bench-wasm/: README.md  bench-arkworks.js  bench-ffjavascript.js  package-lock.json  plot.py  results-arkworks.csv  results-ffjavascript-multi-thread.csv  results-ffjavascript-single-thread.csv
bench-wasm-node/: README.md  bench-arkworks.js  bench-ffjavascript.js  package-lock.json  package.json  plot.py  results-ffjavascript-multi-thread.csv  results-ffjavascript-single-thread.csv
bench-wasm-web/: BENCHMARK-multi3.md  BENCHMARK-new.md  BENCHMARK-old.md  BENCHMARK.md  README.md  package-lock.json  package.json  playwright.base.config.mjs  playwright.benchmark.config.mjs  playwright.test.config.mjs  serve.json  test-plugin-package.spec.mjs  tests.spec.mjs  tsconfig.json
playwright-perf-plugin/: index.js  package.json
scripts/: benchmark-arkworks.bash  benchmark.bash  build.bash  plot-benchmark.py  setup.bash  test.bash
src/: lib.rs
tests/: browser.rs  node.rs  web_worker.rs
(+47 files in other folders)
