[package]
name = "wasm-multiexp-bench"
version = "0.1.0"
authors = ["Piotr Roslaniec <p.roslaniec@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ark-bls12-381 = "0.4.0"
ark-ec = { version = "0.4.2" }
ark-ff = { version = "0.4.2"}
ark-std = { version = "0.4.0"}
getrandom = { version = "0.2", features = ["js"] }
# Pinning version to fix "using deprecated parameters for the initialization function; pass a single object instead" warning
wasm-bindgen = { version = "=0.2.92", features = ["serde-serialize"] }
web-time = "1.1.0"
serde = { version = "1.0.210", features = ["derive"] }
wasm-bindgen-rayon = { version = "1.2.1" , optional = true}
rayon = { version = "1.10.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
multithreading = ["rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel", "wasm-bindgen-rayon"]

# Enable when parsing WASM traces
# See: https://github.com/rustwasm/wasm-pack/issues/797
#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-O4', '-g']

# Fixes wasm-bindgen-cli error:
# "too many locals: locals exceed maximum"
[profile.dev]
opt-level = 1
incremental = true
